@@ -45,10 +45,14 @@ CParser::CParser(QTextDocument *rawDocument, const QString &sUrlToWiki, const QD
     sListInterwikiLink << "http://ubuntuusers.de/calendar/";
     sListInterwikiKey << "canonical";
     sListInterwikiLink << "http://www.canonical.com/content/";
+    sListInterwikiKey << "canonicalblog";
+    sListInterwikiLink << "http://blog.canonical.com/";
     sListInterwikiKey << "debian";
     sListInterwikiLink << "http://wiki.debian.org/";
     sListInterwikiKey << "debian_de";
     sListInterwikiLink << "http://wiki.debian.org/de/";
+    sListInterwikiKey << "dropbox";
+    sListInterwikiLink << "http://dl.dropbox.com/u/";
     sListInterwikiKey << "ean";
     sListInterwikiLink << "http://www.google.com/search?as_q=ean&safe=off&btnG=Google-Suche#q=ean+";
     sListInterwikiKey << "edubuntu";
@@ -63,12 +67,16 @@ CParser::CParser(QTextDocument *rawDocument, const QString &sUrlToWiki, const QD
     sListInterwikiLink << "http://www.getdeb.net/software/";
     sListInterwikiKey << "google";
     sListInterwikiLink << "http://www.google.de/search?q=";
+    sListInterwikiKey << "gplus";
+    sListInterwikiLink << "https://plus.google.com/";
     sListInterwikiKey << "googlecode";
     sListInterwikiLink << "http://code.google.com/p/";
     sListInterwikiKey << "holarse";
     sListInterwikiLink << "http://www.holarse-linuxgaming.de/wiki/";
     sListInterwikiKey << "identica";
     sListInterwikiLink << "http://identi.ca/";
+    sListInterwikiKey << "iawm";
+    sListInterwikiLink << "http://wayback.archive.org/web/*/http://";
     sListInterwikiKey << "ikhaya";
     sListInterwikiLink << "http://ikhaya.ubuntuusers.de/";
     sListInterwikiKey << "isbn";
@@ -77,12 +85,20 @@ CParser::CParser(QTextDocument *rawDocument, const QString &sUrlToWiki, const QD
     sListInterwikiLink << "http://kubuntu.org/";
     sListInterwikiKey << "kubuntu-de";
     sListInterwikiLink << "http://wiki.kubuntu-de.org/";
+    sListInterwikiKey << "kubuntu_doc";
+    sListInterwikiLink << "https://wiki.kubuntu.org/";
+    sListInterwikiKey << "lastfm";
+    sListInterwikiLink << "http://www.lastfm.de/group/";
     sListInterwikiKey << "launchpad";
     sListInterwikiLink << "https://launchpad.net/";
+    sListInterwikiKey << "liflg";
+    sListInterwikiLink << "http://liflg.org/?catid=";
     sListInterwikiKey << "linuxgaming";
     sListInterwikiLink << "http://wiki.linuxgaming.de/index.php/";
     sListInterwikiKey << "lpuser";
     sListInterwikiLink << "https://launchpad.net/~";
+    sListInterwikiKey << "lubuntu";
+    sListInterwikiLink << "http://www.lubuntu.net/";
     sListInterwikiKey << "osm";
     sListInterwikiLink << "http://wiki.openstreetmap.org/wiki/";
     sListInterwikiKey << "packages";
