@@ -43,7 +43,7 @@ class CProgressDialog : public QDialog
     Q_OBJECT
 
 public:
-    explicit CProgressDialog(const QString &sScriptname, const QString &sAppName, QWidget *parent = 0, QString sDownloadFolder = "");
+    explicit CProgressDialog(const QString &sScriptname, const QString &sAppname, QWidget *parent = 0, QString sDownloadFolder = "");
     ~CProgressDialog();
 
 private slots:
