@@ -81,27 +81,35 @@ wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/49/16/askubuntu.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/13/18/bug.png
 wget -nv -N http://static.cdn.ubuntu-de.org/img/interwiki/bug.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/18/16/canonical.png
+wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/15/26/canonicalblog.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/04/09/debian.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/29/09/debian_de.png
+wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/39/20/dropbox.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/09/18/ean.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/50/17/edubuntu.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/33/18/fb.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/55/09/freshmeat.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/15/18/getdeb.png
+wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/09/37/gplus.png
 wget -nv -N http://static.cdn.ubuntu-de.org/img/interwiki/getdeb.png
 wget -nv -N http://static.cdn.ubuntu-de.org/img/interwiki/googlecode.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/36/18/googlecode.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/44/18/holarse.png
+wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/28/40/iawm.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/22/18/identica.png
 wget -nv -N http://static.cdn.ubuntu-de.org/img/interwiki/isbn.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/52/18/isbn.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/49/17/kubuntu.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/36/16/kubuntu-de.png
+wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/57/41/kubuntu_doc.png
+wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/00/18/lastfm.png
 wget -nv -N http://static.cdn.ubuntu-de.org/img/interwiki/launchpad.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/11/18/launchpad.png
+wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/23/22/liflg.jpg
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/15/18/linuxgaming.png
 wget -nv -N http://static.cdn.ubuntu-de.org/img/interwiki/lpuser.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/22/18/lpuser.png
+wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/12/19/lubuntu.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/48/09/osm.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/16/16/packages.png
 wget -nv -N http://media.cdn.ubuntu-de.org/wiki/attachments/55/09/playdeb.png
