@@ -1,0 +1,5 @@
+inyokaedit = {
+ 'impl' : 'launchpad',
+ 'project' : 'inyokaedit',
+ 'bug_pattern_base' : None,
+ }
